--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,45 +8,19 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/leili?serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/leili?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
 
-    #   数据源其他配置
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: stat,wall
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-    #初始化时运行sql脚本
-#    schema: classpath:sql/schema.sql
-#    initialization-mode: always
-
-    druid:
-      #开启druid 监控台servlet
-      stat-view-servlet:
-        enabled: true
-        login-username: admin
-        loginPassword: 123456
-      #开启druid 监控filter
-      web-stat-filter:
-        enabled: true
-#设置mybatis
 mybatis:
   mapper-locations: classpath:com/zhongger/zchat/mapper/*Mapper.xml
   #config-location: classpath:mybatis-config1.xml
   typeAliasesPackage: com.zhongger.zchat.pojo
   configuration:
     mapUnderscoreToCamelCase: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+logging:
+  level:
+    com:
+      zhongger:
+        zchat:
+          mapper: debug
