--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8898
+  port: 8890
   servlet:
     context-path: /zchat
 
@@ -10,7 +10,17 @@ spring:
     password: 123456
     url: jdbc:mysql://localhost:3306/leili?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+#  redis:
+#    database: 0
+#    host: 10.93.38.237
+#    port: 6379
+#    timeout: 50s
+#  lettuce:
+#    pool:
+#      max-idle: 50
+#      min-idle: 10
+#      max-active: 100
+#      max-wait: 1000
 mybatis:
   mapper-locations: classpath:com/zhongger/zchat/mapper/*Mapper.xml
   #config-location: classpath:mybatis-config1.xml
