--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/leili?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://124.222.21.183:3308/leili?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 0
-    host: 10.93.37.3
+    host: 124.222.21.183
     port: 6379
     timeout: 50s
   lettuce:
@@ -42,3 +42,9 @@ pagehelper:
   reasonable: true
   support-methods-arguments: true
   params: count
+
+#NameServer地址 rocketmq.name-server=192.168.232.128:9876 #默认的消息生产者组 rocketmq.producer.group=springBootGrou
+#rocketmq:
+#  name-server: 127.0.0.1:9876
+#  producer:
+#    group: MyConsumerGroup
